Closed Bug 1162835 Opened 9 years ago Closed 9 years ago

Various missing includes in FormData/FormSubmission headers

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

So someone including this header won't necessarily be able to compile it.
So in addition to the "nsFormSubmission has inline dtor and nsCOMPtr<nsIContent> member, but does not include nsIContent.h" issue, nsFormData is missing includes too...  In particular, it has nsRefPtr<File> members of structs with inline dtors, but doesn't include File.h.
Summary: nsFormSubmission has inline dtor and nsCOMPtr<nsIContent> member, but does not include nsIContent.h → Various missing includes in FormData/FormSubmission headers
Comment on attachment 8603143 [details] [diff] [review]
Add some missing includes to nsFormSubmission and nsFormData

Review of attachment 8603143 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/base/nsFormData.h
@@ +21,5 @@
>  namespace mozilla {
>  class ErrorResult;
>  
>  namespace dom {
>  class File;

remove this.
Attachment #8603143 - Flags: review?(amarchesini) → review+
https://hg.mozilla.org/mozilla-central/rev/574db34c205c
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.